WebUI - Increase input entries to 25px to avoid font cutoff - Remove look from the grid status 'online' box (Security & spam measure, only available when logged in)

--- a/WhiteCoreSim/bin/html/css/styles1.css
+++ b/WhiteCoreSim/bin/html/css/styles1.css
@@ -698,7 +698,7 @@ h5 {font-size: 10px;}
 input, textarea, select, button {
 	padding: 5px;
 	margin: 5px;
-	height: 21px;
+	height: 25px;
 	color: #a7ed42;
 	background: #406580;
 	border: 1px solid #333;
