--- a/WhiteCoreSim/bin/html/css/styles3.css
+++ b/WhiteCoreSim/bin/html/css/styles3.css
@@ -688,7 +688,7 @@ h5 {font-size: 10px;}
 input, textarea, select, button {
 	padding: 5px;
 	margin: 5px;
-	height: 21px;
+	height: 25px;
 	color: #ccc;
 	background: #4164AF;
 	border: 1px solid #5d8edf;
