--- a/WhiteCoreSim/bin/html/css/styles4.css
+++ b/WhiteCoreSim/bin/html/css/styles4.css
@@ -679,7 +679,7 @@ h5 {font-size: 10px;}
 input, textarea, select, button {
 	padding: 5px;
 	margin: 5px;
-	height: 21px;
+	height: 25px;
 	color: #ffffff;
 	background: #444444;
 	border: 1px solid #555;
