--- a/WhiteCoreSim/bin/html/css/styles5.css
+++ b/WhiteCoreSim/bin/html/css/styles5.css
@@ -678,7 +678,7 @@ h5 {font-size: 10px;}
 input, textarea, select, button {
 	padding: 5px;
 	margin: 5px;
-	height: 21px;
+	height: 25px;
 	color: #ffffff;
 	background: #333333;
 	border: 1px solid #444;
