--- a/WhiteCoreSim/bin/html/css/styles6.css
+++ b/WhiteCoreSim/bin/html/css/styles6.css
@@ -675,7 +675,7 @@ h5 {font-size: 10px;}
 input, textarea, select, button {
 	padding: 5px;
 	margin: 5px;
-	height: 21px;
+	height: 25px;
 	color: #7E7E7E;
 	background: #fcfcfc;
 	border: 1px solid #eee;
